# mega

./: .env.example  .gitignore  Dockerfile  README.md  REPORT.md  SETUP.md  docker-compose.yml  geometry.py  pyproject.toml  requirements.txt  test_geometry.py  Заданиe для Мегашколы Coding agents.docx
.github/workflows/: agent_trigger.yml
config/: settings.yaml
docs/: VALIDATION.md
docs/examples/issues/: medium_task.md  simple_task.md  task_with_error.md
prompts/: reviewer_v1.txt
scripts/: add_github_secrets.ps1  list_issues_prs.py  setup_github_repo.py
src/: __init__.py  code_agent.py  code_applier.py  git_runner.py  github_client.py  issue_parser.py  llm_client.py  main.py  pr_context.py  prompts.py  quality_runner.py  reviewer_agent.py  state_manager.py
tests/: __init__.py  conftest.py  test_skeleton.py
