[project]
name = "coding-agent"
version = "0.1.0"
description = "Code Agent — CLI для превращения Issue в Pull Request"
requires-python = ">=3.11"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = false
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.black]
line-length = 100
target-version = ["py311"]
